BoltのPCサイトを作りました

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
+    <meta name="description" content="This is my portfolio site.">
+    <meta name=”keywords” content="bolt, bootstrap, portfolio">
+
     <title>Bolt - Free Bootstrap 3 Theme</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
@@ -13,6 +16,91 @@
   </head>
   <body>
 
-    <script src="js/script.js"></script>
+    <header class="header">
+      <i class="font-awesome header-left-image fa-3x fas fa-bolt"></i>
+      <p class=header__contactBtn>Contact</p>
+    </header>
+
+    <main class="main">
+
+      <div class="theme">
+          <div class="theme__inner">
+            <h1 class="theme-title">Bolt Theme</h1>
+            <p class="theme-subTitle">FREE BOOTSTRAP THEMES</p>
+          </div>
+      </div>     
+
+      <section class="section-green">
+        <img src="./img/iphone.png" alt="" class="section-green-image">
+        <div class="section-green-text">
+          <h1 class="section-green-text__title">WHAT WE CAN DO</h1>
+          <p class="section-green-text__content font-Lato">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        </div>
+      </section> 
+
+      <article class="article">
+        <div class="article-inner">
+          <h1 class="article-inner__title">OUT LATEST WORK</h1>
+          <div class="article-inner__imageBox">
+            <img src="./img/01.jpg" alt="" class="article-inner__image">
+            <img src="./img/02.jpg" alt="" class="article-inner__image">
+            <img src="./img/03.jpg" alt="" class="article-inner__image">
+            <img src="./img/04.jpg" alt="" class="article-inner__image">
+            <img src="./img/05.jpg" alt="" class="article-inner__image">
+            <img src="./img/06.jpg" alt="" class="article-inner__image">
+          </div>
+          <div class="article-inner__text-and-btn">
+            <p class="article-inner__text font-Lato">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <p class="article-inner__btn">Email Me</p>
+          </div>
+        </div>
+      </article>
+
+      <section class="section-black">
+        <h1 class="section-black__title">OUR SKILLS</h1>
+        <div class="section-black__figureBox">
+          <figure class="section-black__figure">
+            <img src="./img/circle_01.png" alt="">
+            <figcaption class="section-black__figure__caption">JavaScript</figcaption>
+          </figure>
+          <figure class="section-black__figure">
+            <img src="./img/circle_02.png" alt="">
+            <figcaption class="section-black__figure__caption">Bootstrap</figcaption>
+          </figure>
+          <figure class="section-black__figure">
+            <img src="./img/circle_03.png" alt="">
+            <figcaption class="section-black__figure__caption">WordPress</figcaption>
+          </figure>
+          <figure class="section-black__figure">
+            <img src="./img/circle_04.png" alt="">
+            <figcaption class="section-black__figure__caption">Photoshop</figcaption>
+          </figure>          
+        </div>
+      </section>
+
+      <nav class="sns-nav">
+        <div class="sns-nav-inner">
+          <div class="sns-nav-inner-hover">
+            <a href="" class="font-awesome hover-image fa-3x fab fa-facebook-square"></a>  
+          </div>
+          <div class="sns-nav-inner-hover">
+            <a href="" class="font-awesome hover-image fab fa-3x fa-dribbble"></a>
+          </div>
+          <div class="sns-nav-inner-hover">
+            <a href="" class="font-awesome hover-image fa-3x fab fa-twitter"></a> 
+          </div>
+          <div class="sns-nav-inner-hover">
+            <a href="" class="font-awesome hover-image fa-3x fas fa-envelope"></a>
+          </div>
+        </div>
+      </nav>
+    </main>
+    <footer class="footer">
+      <div class="footer-inner">
+        <p class="footer-inner__title">Crafted with</p>
+        <i class="font-awesome footer-inner__image fas fa-heart"></i>
+        <p class="footer-inner__title">by BlackTie.co.</p>
+      </div>
+    </footer>
   </body>
 </html>
