Bolt指摘部分の調整

--- a/index.html
+++ b/index.html
@@ -17,86 +17,95 @@
   <body>
 
     <header class="header">
-      <i class="font-awesome header-left-image fa-3x fas fa-bolt"></i>
-      <p class=header__contactBtn>Contact</p>
+      <div class="header-inner clearfix">
+          <i class="font-awesome header-left-image fa-3x fas fa-bolt"></i>
+          <a class="header__contactBtn btn" href>Contact</a>
+      </div>
+      
     </header>
 
     <main class="main">
 
       <div class="theme">
           <div class="theme__inner">
-            <h1 class="theme-title">Bolt Theme</h1>
+            <h2 class="theme-title">Bolt Theme</h2>
             <p class="theme-subTitle">FREE BOOTSTRAP THEMES</p>
           </div>
       </div>     
 
       <section class="section-green">
-        <img src="./img/iphone.png" alt="" class="section-green-image">
-        <div class="section-green-text">
-          <h1 class="section-green-text__title">WHAT WE CAN DO</h1>
-          <p class="section-green-text__content font-Lato">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <div class="section-green-inner clearfix">
+          <img src="./img/iphone.png" alt="" class="section-green-image">
+          <div class="section-green-text">
+            <h2 class="section-green-text__title">WHAT WE CAN DO</h2>
+            <p class="section-green-text__content font-Lato">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          </div>
         </div>
       </section> 
 
       <article class="article">
         <div class="article-inner">
-          <h1 class="article-inner__title">OUT LATEST WORK</h1>
+          <h2 class="article-inner__title">OUT LATEST WORK</h2>
           <div class="article-inner__imageBox">
-            <img src="./img/01.jpg" alt="" class="article-inner__image">
-            <img src="./img/02.jpg" alt="" class="article-inner__image">
-            <img src="./img/03.jpg" alt="" class="article-inner__image">
-            <img src="./img/04.jpg" alt="" class="article-inner__image">
-            <img src="./img/05.jpg" alt="" class="article-inner__image">
-            <img src="./img/06.jpg" alt="" class="article-inner__image">
+            <a class="btn article-inner__image"><img src="./img/01.jpg" alt=""></a>
+            <a class="btn article-inner__image"><img src="./img/02.jpg" alt=""></a>
+            <a class="btn article-inner__image"><img src="./img/03.jpg" alt=""></a>
+            <a class="btn article-inner__image"><img src="./img/04.jpg" alt=""></a>
+            <a class="btn article-inner__image"><img src="./img/05.jpg" alt=""></a>
+            <a class="btn article-inner__image"><img src="./img/06.jpg" alt=""></a>
           </div>
-          <div class="article-inner__text-and-btn">
+          <div class="article-inner__text-and-btn clearfix">
             <p class="article-inner__text font-Lato">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-            <p class="article-inner__btn">Email Me</p>
+            <a class="article-inner__btn btn" href>Email Me</a>
           </div>
         </div>
       </article>
 
       <section class="section-black">
-        <h1 class="section-black__title">OUR SKILLS</h1>
-        <div class="section-black__figureBox">
-          <figure class="section-black__figure">
-            <img src="./img/circle_01.png" alt="">
-            <figcaption class="section-black__figure__caption">JavaScript</figcaption>
-          </figure>
-          <figure class="section-black__figure">
-            <img src="./img/circle_02.png" alt="">
-            <figcaption class="section-black__figure__caption">Bootstrap</figcaption>
-          </figure>
-          <figure class="section-black__figure">
-            <img src="./img/circle_03.png" alt="">
-            <figcaption class="section-black__figure__caption">WordPress</figcaption>
-          </figure>
-          <figure class="section-black__figure">
-            <img src="./img/circle_04.png" alt="">
-            <figcaption class="section-black__figure__caption">Photoshop</figcaption>
-          </figure>          
+        <div class="section-black-inner">
+          <h1 class="section-black__title">OUR SKILLS</h1>
+          <div class="section-black__figureBox clearfix">
+            <figure class="section-black__figure">
+              <img src="./img/circle_01.png" alt="">
+              <figcaption class="section-black__figure__caption">JavaScript</figcaption>
+            </figure>
+            <figure class="section-black__figure">
+              <img src="./img/circle_02.png" alt="">
+              <figcaption class="section-black__figure__caption">Bootstrap</figcaption>
+            </figure>
+            <figure class="section-black__figure">
+              <img src="./img/circle_03.png" alt="">
+              <figcaption class="section-black__figure__caption">WordPress</figcaption>
+            </figure>
+            <figure class="section-black__figure">
+              <img src="./img/circle_04.png" alt="">
+              <figcaption class="section-black__figure__caption">Photoshop</figcaption>
+            </figure>          
+          </div>
         </div>
       </section>
 
       <nav class="sns-nav">
         <div class="sns-nav-inner">
           <div class="sns-nav-inner-hover">
-            <a href="" class="font-awesome hover-image fa-3x fab fa-facebook-square"></a>  
+            <a href="" class="font-awesome hover-image fa-3x fab fa-facebook-square btn"></a>  
           </div>
           <div class="sns-nav-inner-hover">
-            <a href="" class="font-awesome hover-image fab fa-3x fa-dribbble"></a>
+            <a href="" class="font-awesome hover-image fab fa-3x fa-dribbble btn"></a>
           </div>
           <div class="sns-nav-inner-hover">
-            <a href="" class="font-awesome hover-image fa-3x fab fa-twitter"></a> 
+            <a href="" class="font-awesome hover-image fa-3x fab fa-twitter btn"></a> 
           </div>
           <div class="sns-nav-inner-hover">
-            <a href="" class="font-awesome hover-image fa-3x fas fa-envelope"></a>
+            <a href="" class="font-awesome hover-image fa-3x fas fa-envelope btn"></a>
           </div>
         </div>
       </nav>
+    
     </main>
+
     <footer class="footer">
-      <div class="footer-inner">
+      <div class="footer-inner clearfix">
         <p class="footer-inner__title">Crafted with</p>
         <i class="font-awesome footer-inner__image fas fa-heart"></i>
         <p class="footer-inner__title">by BlackTie.co.</p>
