--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <div class="header-inner clearfix">
           <i class="font-awesome header-left-image fa-3x fas fa-bolt"></i>
-          <a class="header__contactBtn btn" href>Contact</a>
+          <a class="header__contactBtn btn" href="">Contact</a>
       </div>
       
     </header>
@@ -47,12 +47,12 @@
         <div class="article-inner">
           <h2 class="article-inner__title">OUT LATEST WORK</h2>
           <div class="article-inner__imageBox">
-            <a class="btn article-inner__image"><img src="./img/01.jpg" alt=""></a>
-            <a class="btn article-inner__image"><img src="./img/02.jpg" alt=""></a>
-            <a class="btn article-inner__image"><img src="./img/03.jpg" alt=""></a>
-            <a class="btn article-inner__image"><img src="./img/04.jpg" alt=""></a>
-            <a class="btn article-inner__image"><img src="./img/05.jpg" alt=""></a>
-            <a class="btn article-inner__image"><img src="./img/06.jpg" alt=""></a>
+            <a class="btn article-inner__image" href=""><img src="./img/01.jpg" alt=""></a>
+            <a class="btn article-inner__image" href=""><img src="./img/02.jpg" alt=""></a>
+            <a class="btn article-inner__image" href=""><img src="./img/03.jpg" alt=""></a>
+            <a class="btn article-inner__image" href=""><img src="./img/04.jpg" alt=""></a>
+            <a class="btn article-inner__image" href=""><img src="./img/05.jpg" alt=""></a>
+            <a class="btn article-inner__image" href=""><img src="./img/06.jpg" alt=""></a>
           </div>
           <div class="article-inner__text-and-btn clearfix">
             <p class="article-inner__text font-Lato">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
@@ -106,9 +106,10 @@
 
     <footer class="footer">
       <div class="footer-inner clearfix">
-        <p class="footer-inner__title">Crafted with</p>
-        <i class="font-awesome footer-inner__image fas fa-heart"></i>
-        <p class="footer-inner__title">by BlackTie.co.</p>
+        <p class="footer-inner__title">Crafted with
+          <i class="font-awesome footer-inner__image fas fa-heart"></i>
+          by BlackTie.co.
+        </p>
       </div>
     </footer>
   </body>
