Boltページのレスポンシブ化

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <div class="header-inner clearfix">
           <i class="font-awesome header-left-image fa-3x fas fa-bolt"></i>
-          <a class="header__contactBtn btn" href="">Contact</a>
+          <a class="header__contactBtn btn" href="">Contact　<span id="hamburger"></span></a>
       </div>
       
     </header>
